--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <meta name="keywords" content="login, acesso, segurança, conta">
 </head>
 <body>
-    <main class="login"> 
+    <main class="login-container"> 
      <header>
         <h1>Bem-vindo</h1>
         <p class="subtitle">Entre com suas credenciais para acessar</p>
      </header>
+     <form action="/login" method="post">
+        <div class="form-group">
+            <label for="email">Email ou Usuario</label>
+            <div class="input-group">
+                <input type="email" id="email" name="email" placeholder="Seu email ou nome de usuario" required="required ou autofocus"required autofocus>
+        </div>
+        <div class="form-group">
+            <label for="password">senha</label>
+            <div class="input-group">
+                <input type="password" id="password" name="password" placeholder="senha" required="required ou autofocus">
+        </div>
+     </form>
     </main>
 </body>
 </html>
