--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="form-group">
             <label for="password">senha</label>
             <div class="input-group">
-                <input type="password" id="password" name="password" placeholder="senha" required="required ou autofocus">
+                <input type="password" id="password" name="password" placeholder="Senha" required="required ou autofocus">
         </div>
      </form>
     </main>
