--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="email" id="email" name="email" placeholder="Seu email ou nome de usuario" required="required ou autofocus"required autofocus>
         </div>
         <div class="form-group">
-            <label for="password">senha</label>
+            <label for="password">Senha</label>
             <div class="input-group">
                 <input type="password" id="password" name="password" placeholder="Senha" required="required ou autofocus">
         </div>
