--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <div class="input-group">
                 <input type="password" id="password" name="password" placeholder="Senha" required="required ou autofocus">
         </div>
+
+        <div class="forgot-passowrd"><a href="/recuperar senha" a="">Esqueci a senha?</a>
+        </div>
      </form>
     </main>
 </body>
