--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
             <div class="input-group">
                 <input type="password" id="password" name="password" placeholder="Senha" required="required ou autofocus">
         </div>
-
         <div class="forgot-passowrd"><a href="/recuperar senha" a="">Esqueci a senha?</a>
         </div>
+        <div class="options">
+            <div class="remember-me">
+                <input type="checkbox" id="remember" name="remember">
+                <label for="remember">Lembrar-me</label>
+            </div>
+        </div>
+        <button type="submit">Entrar</button> 
      </form>
     </main>
 </body>
