--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </div>
         <button type="submit">Entrar</button> 
      </form>
+     <div class="divider"><span>Ou continue com</span></div>
+     <div class="social-login">
+        <a href="#" class="social-btn" aria-label="entrar com google">G</a>
+        <a href="#" class="social-btn" aria-label="entrar com facebook">F</a>
+        <a href="#"  class="social-btn" aria-label="Entrar com Aple">A</a>
+    </div>
+
+    <div class="singup-link">
+        Não tem uma? <a href="/cadastro">Criar conta</a>
+    </div>
+
     </main>
 </body>
 </html>
