--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Minha Login | Minha Plataforma</title>
     <meta name="description" content="pagina de login segura e elegante">
     <meta name="keywords" content="login, acesso, segurança, conta">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main class ="login-container"> 
